# Mina_CMake_Repo

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bash.sh  bin_redir.sh  cmake_install.cmake
lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: main.c
